--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Website hosted on Github</h1>
+<body> background = "pin2.png" </html>
+    <h1 align = "center">
+        <font face =  "ComicSans" size = "10" >MyFrogs</font>
 </body>
 </html>
