--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body> background = "pin2.png" </html>
-    <h1 align = "center">
+<body> background = "pin2.png" </body>
+    <h1>
         <font face =  "ComicSans" size = "10" >MyFrogs</font>
+        <style type = "text/css">
+            body
+            {
+                padding: 0;
+                margin: 0;
+                background: #ffd200;
+            }
+            h1
+            {
+                position: absolute;
+                top: 50%;
+                left: 50%
+            }
+           
+                
 </body>
 </html>
