--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body> background = "pin2.png" </body>
     <h1>
-        <font face =  "ComicSans" size = "10" >MyFrogs</font>
+        <font face =  "Sans-serif" size = "20" >MyFrogs</font>
         <style type = "text/css">
             body
             {
                 padding: 0;
                 margin: 0;
-                background: #ffd200;
             }
             h1
             {
                 position: absolute;
-                top: 50%;
+                top: 45%;
                 left: 50%;
                 transform: translateX(-50%);
                 
