--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 top: 45%;
                 left: 50%;
                 transform: translateX(-50%);
+                trasnform: translateY(-50%);
                 
             }
            
