--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
     <h1>
-        <font face =  "Sans-serif" size = "30" >MyFrogs</font>
+        <font face =  "Sans-serif" >MyFrogs</font>
         <style type = "text/css">
             body
             {
@@ -16,6 +16,7 @@
             }
             h1
             {
+                font-size: 300px;
                 position: absolute;
                 top: 45%;
                 left: 50%;
