--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             }
             h1
             {
-                font-size: 300px;
+                font-size: 5em;
                 position: absolute;
                 top: 45%;
                 left: 50%;
