--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <style type = "text/css">
             body
             {
-                padding: 0;
-                margin: 0;
+                background: galaxy.jpg
+                padding: 100;
+                margin: 100;
             }
             h1
             {
