--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <h1>
         <font face =  "Sans-serif" >MyFrogs</font>
         <style type = "text/css">
+        <body>
+            <div class = "section">
+                <video autoplay loop muted>
+                    <source src  = "
             body
             {
-                background: galaxy.jpg
+                
                 padding: 100;
                 margin: 100;
             }
