--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <body>
             <div class = "section">
                 <video autoplay loop muted>
-                    <source src  = "
+                    <source src  = "y2mate.com - 4K Slow Spinning Galaxy 2160p Motion Background_360p.mp4" type = "y2mate.com - 4K Slow Spinning Galaxy 2160p Motion Background_360p/mp4">
             body
             {
                 
