--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class = "section">
          <video autoplay loop muted>
-            <source src  = "y2mate.com - 4K Slow Spinning Galaxy 2160p Motion Background_360p.mp4" type = "y2mate.com - 4K Slow Spinning Galaxy 2160p Motion Background_360p/mp4">
+            <source src  = "video.mp4" type = "video/mp4">
 </head>
     <h1>
         <font face =  "Sans-serif" >MyFrogs</font>
