--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+ </head>
+    
+
 
 <body>
     <div class = "section">
          <video autoplay loop muted>
-            <source src  = "video.mp4" type = "video/mp4">
+            <source src  = "video.mp4" style = "width:100%;" type = "video/mp4">
 </head>
     <h1>
-        <font face =  "Sans-serif" >MyFrogs</font>
+        <font face =  "Sans-serif" color = "#FFFFFF" >MyFrogs</font>
         <style type = "text/css">            
             h1
             {
