--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 <body>
     <div class = "section">
          <video autoplay loop muted>
-            <source src  = "video.mp4" style = "width:100%;" type = "video/mp4">
+            <source src  = "video.mp4" type = "video/mp4">
+            body
+            {
+                position: absolute;
+                width: 100%;
+            }
 
            
                 
