--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
     <h1>
-        <font face =  "Sans-serif" color = "#FFFFFF" >MyFrogs</font>
+        <font face =  "Sans-serif"  >MyFrogs</font>
         <style type = "text/css">            
             h1
             {
