--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 <body>
     <div class = "section">
-         <video autoplay loop muted>
-            <source src  = "video.mp4" type = "video/mp4">
+            <video width="320" height="240" controls>
+            <video autoplay loop muted>
+                <source src  = "video.mp4" type = "video/mp4">
 
 
 
