--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 
             }
 
-<body>
+</body>
     <div class = "section">
             <video width="320" height="240" controls>
             <video autoplay loop muted>
