--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
     <h1>
-        <font face =  "Sans-serif"  >MyFrogs</font>
+        <font face =  "Times New Roman"  >MyFrogs</font>
         <style type = "text/css">            
             h1
             {
