--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
  </head>
-    
+ #myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
 </head>
 
             
