--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-            
+<body>
         <video autoplay loop muted id= "video">
             <source src  = "video.mp4" type = "video/mp4">
         </video>
@@ -34,7 +34,7 @@
   min-width: 100%;
   min-height: 100%;
 }
-
+</body>
 
 
            
