--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     </head>
 
 <body>
-        <video autoplay loop muted id= "video">
-            <source src  = "video.mp4" type = "video/mp4">
-        </video>
-        <div class="content">
-               <h1>
+    <ul>
+        <li> <a href = "products.html"> Our Products </a> </li>
+    </ul>
+    <video autoplay loop muted id= "video">
+        <source src  = "video.mp4" type = "video/mp4">
+            </video>
+            <div class="content">
+                <h1>
                     <font face =  "monospace"  >MyFrogs</font>
                     <style type = "text/css">            
                     h1
