--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                         transform: translateX(-50%);
                         trasnform: translateY(-50%);
                      }
-
-                     
+    <div class = "size">
+        <video autoplay loop muted class = "video">
+            <source src  = "video.mp4" type = "video/mp4">
+        </video>
 </body>
 
 
