--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         trasnform: translateY(-50%);
                      }
     <div class = "size">
-        <video autoplay loop muted class = "video">
+        <video autoplay loop muted plays-inline class = "size">
             <source src  = "video.mp4" type = "video/mp4">
         </video>
 </body>
