--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
     <head> 
         <title>MyFrogs.to </title>
+        <link href = "styles/main.css" rel = "stylesheet" />
     </head>
 
 <body>
