--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class = "size">
+        <video>
             <source src  = "video.mp4" type = "video/mp4">
         </video>
     </div>
