--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class = "size">
-        <video>
+        <video height = "1960" width = "720" autoplay loop muted = "" >
             <source src  = "video.mp4" type = "video/mp4">
         </video>
     </div>
