--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     
+.size{
+    position: relative;
+    padding-bottom: 100%;
+    padding-top: 30px;
+    height:0;
+    overflow
+}
+    
     <head> 
         <title>MyFrogs.to </title>
         <link href = "styles/main.css" rel = "stylesheet" type = "text/css" />
@@ -8,7 +16,7 @@
 
 <body>
     <div class = "size">
-        <video autoplay loop muted = "" >
+        <video autoplay = "true" loop>
             <source src  = "video.mp4" type = "video/mp4">
         </video>
     </div>
