--- a/index.html
+++ b/index.html
@@ -3,13 +3,30 @@
      
     <head> 
         <title>MyFrogs.to </title>
-        <link href = "styles/main.css" rel = "stylesheet" type = "text/css" />
+        <link rel="stylesheet" href="main.css">
     </head>
 
 <body>
     <div class = "size">
-        <video autoplay = "true" loop>
-            <source src  = "video.mp4" type = "video/mp4">
+          <video autoplay = "true" loop>
+               <source src  = "video.mp4" type = "video/mp4">
+          </video>
+    </div>
+     
+    <div class = "content">
+        <h1>
+            <font face =  "monospace"  >MyFrogs</font>
+            <style type = "text/css">            
+            h1
+            {
+                font-size: 5em;
+                position: absolute;
+                top: 40%;
+                left: 50%;
+                transform: translateX(-50%);
+                trasnform: translateY(-50%);
+            }
+        </h1>
     </div>
  
 
