--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class = "content">
         <h1>
             <font face =  "monospace"  >MyFrogs</font>
-            <style type = "text/css">            
+             <style type = "text/css"> </style>           
         </h1>
     </div>
  
