--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
      
     <div class = "content">
         <h1>
-            <font face =  "monospace"  >MyFrogs</font>
-             <style type = "text/css"> </style>           
+            <font face =  "monospace">
+                 MyFrogs
+             </font>         
         </h1>
     </div>
  
