--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+     .content h1{
+  font-size: 160px;
+  color: black;
+  font-weight: 600;
+  transitions: 0.5s;
+}
+.content h1{
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
+}
+     
+.video{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+
      
     <head> 
         <title>MyFrogs.to </title>
