--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
      <style>
           video{
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%)
-                    min-width: 100%;
-                    min-height: 100%;
-                    width: auto;
-                    height: auto;
+                 /* Full height */
+                 height: 100%; 
+                 width: 100%;
+
+                 /* Center and scale the image nicely */
+                 background-position: center;
+                 background-repeat: no-repeat;
+                 background-size: cover;
                }
              h1{
                  font-size: 160px;
