--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
                  font-size: 160px;
                  color: black;
                  font-weight: 600;
-                 transitions: 0.5s;
-                 -webkit-text-stroke: 2px #fff;
-                 color: transparent;
+                 text-align: centre;
              }
      </style>
+     
     <head> 
          <title> MyFrogs.to </title>
     </head>
