--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 
      <style>
           video{
-                 /* Full height */
-                 height: 100%; 
-                 width: 100%;
-
-                 /* Center and scale the image nicely */
-                 background-position: center;
-                 background-repeat: no-repeat;
-                 background-size: cover;
+                 object-fit: cover;
+                 width: 100vw;
+                 height: 100vh;
+                 position: fixed;
+                 top: 0;
+                 left: 0;
                }
+          
              h1{
                  font-size: 160px;
                  color: black;
