--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                  width: 100vw;
                  height: 100vh;
                  position: fixed;
-                 top: 80;
+                 top: 100;
                  left: 0;
                }
           
           h1{
                  font-family: 'Syncopate', sans-serif;
-                 color: #4a3a27;
+                 color: black;
                  text-transform: uppercase;
                  letter-spacing: 3vw;
                  line-height: 1.2;
