--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
      <style>
-          viewport-header {
+          view {
             position: relative;
             height: 50vh;
             text-align: center;
@@ -13,7 +13,6 @@
             justify-content: center;
           }
           video{
-                 object-fit: cover;
                  width: 100vw;
                  height: 100vh;
                  position: fixed;
@@ -49,12 +48,12 @@
 
      
 
-     <header class="viewport-header">
+     <div class="view">
        <h1>
          ....
          <span>-----</span>
        </h1>
-     </header>
+     </div>
 
 
                     
