--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
             justify-content: center;
           }
           video{
-                 width: 100vw;
+                 width: 100%;
                  height: 100vh;
                  position: fixed;
                  top: 0;
                  left: 0;
+                 z-index = -1;
                }
           
           h1{
