--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                   }
           }
           video{
-                 width: 100%;
+                 object-fit: cover;
+                 width: 100vw;
                  height: 100vh;
                  position: fixed;
                  top: 0;
