--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            z-index = 1;
                
                h1{
                       font-family: 'Syncopate', sans-serif;
@@ -20,10 +21,12 @@
                       line-height: 1.2;
                       font-size: 3vw;
                       text-align: center;
+                      z-index = 1;
                       span {
                         display: block;
                         font-size: 10vw;
                         letter-spacing: -1.3vw;
+                        z-index = 1;
                       }
                   }
           }
