--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
      <div class="view">
        <h1>
-         .... <br>
-         -----
+         This is a test <br>
+         Following
        </h1>
      </div>
 
