--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
      
     <head> 
-         <link rel="stylesheet" type="text/css" href="https://viscerlic.github.io/main.css">
+         <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/Viscerlic/firstsite/main/main.css">
          <title> MyFrogs.to </title>
     </head>
 
