--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
      
 <style>
+     body {
+	background: url(../images/bg-body.jpg) repeat;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15px;
+	margin: 0;
+	padding: 0;
+     }
      .view {
               position: relative;
               height: 50vh;
