--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
               align-items: center;
               justify-content: center;
               z-index = 1;
+	      left = 50%;
+	      top = 50%;
                
-                      font-family: 'Syncopate', sans-serif;
+                      font-family: 'Syncopate', monospace;
                       color: red;
                       text-transform: uppercase;
-                      letter-spacing: 3vw;
+                      letter-spacing: 1vw;
                       line-height: 1.2;
                       font-size: 3vw;
                       text-align: center;
@@ -41,7 +43,7 @@
      <div class="view">
        <h1>
          This is a test <br>
-         Following
+         Ignore
        </h1>
      </div>
 
